tests/sumo/extended/calibrator/errors/2flows_sameInterval_noEnd/errors.sumo
Error: Overlapping or unsorted intervals in calibrator 'calibtest' (begin=0.00, begin2=0.00).
Quitting (on error).
